[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/maintheme125.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/maintheme150.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/maintheme100.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/maintheme175.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/maintheme200.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Terrain.tscn" type="PackedScene" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
two_players = true

[node name="a100" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="a125" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="a150" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="a175" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="a200" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Terrain1" parent="." instance=ExtResource( 7 )]

[node name="Terrain2" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 338, 22 )
controller = 1
